# serializer version: 1
# name: TestBinanceCandlestick.test_get_history
  'e804837c96943edf0dab1385d1d86af55140d672e4933664e2ab890b60aadbae'
# ---
# name: TestBinanceCandlestick.test_get_history.1
  'e804837c96943edf0dab1385d1d86af55140d672e4933664e2ab890b60aadbae'
# ---
# name: TestBinanceCandlestick.test_load_between
  'c549aeb94d6d9c1008dcfb8610a7cdf1ff5a0e1afdce28e74f774d03f9680cdc'
# ---
# name: TestBinanceCandlestick.test_load_between.1
  'f4bc9721c6330042c2d0720e77a9d42856edb8c6071dc9c5abf533ace206fda1'
# ---
# name: TestBinanceCandlestick.test_load_between.2
  'a514ebacbabcb42897ccbde9a52e8389d8136dab7ce5dae56545bd223675e423'
# ---
# name: TestBinanceCandlestick.test_load_sharp
  'bf5a3e624c013793605ac93c378f0b18cf4c8649e38b39158a026bc8c6d83663'
# ---
# name: TestBinanceCandlestick.test_load_sharp.1
  '3d896d3fb48a0d7762c7480b75ee4ebeb1479c1d475e5625e3acf8abcf733c6a'
# ---
# name: TestOkxCandlestick.test_get_history
  '630039603f1748323fd87585d61f875f508f16acff1fd7fbd56aae3fdab91970'
# ---
# name: TestOkxCandlestick.test_get_history.1
  '630039603f1748323fd87585d61f875f508f16acff1fd7fbd56aae3fdab91970'
# ---
# name: TestOkxCandlestick.test_load_between
  'a211b25ef2f44d886c596a529109b0c3fc0321f17795761b39950abc0f284ed1'
# ---
# name: TestOkxCandlestick.test_load_between.1
  '70da24dfd5011de56551dc383789fd781e2b223963f31c92c566ec8869e19771'
# ---
# name: TestOkxCandlestick.test_load_between.2
  'c10de011e963f64e071e894a86eacd30dea07a06cd9b9fab4bf19b339de6d94e'
# ---
# name: TestOkxCandlestick.test_load_sharp
  'cd1795c43ec878129404e5daff8a59cbccfcc17dde6ea72a36e1555ad2ac6696'
# ---
# name: TestOkxCandlestick.test_load_sharp.1
  '430d823add2768dca993faada4728c698eef2e1749e7d5610dec58a849794a24'
# ---
